--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <p>欢迎来到我的个人网站</p>
 
 <ul>
-  <li><a href="https://shencl89757.github.io/shenmygithub/">shen Blog</a></li>
+  <li><a href="https://shencl89757.github.io/">shen Blog</a></li>
 </ul?
